Add image for guides

--- a/main_app/templates /guides/index.html
+++ b/main_app/templates /guides/index.html
@@ -6,7 +6,7 @@
 <a href="{% url 'detail' guide.id%}">
   <div class="card">
     <div class="card-content">
-      <span class="card-img"><img src="" alt=""></span>
+      <span class="card-img"><img src="./JS.png"></span>
     </div>
     <span class="card-title">{{ guide.name }}</span>
   </div>
